--- a/src/App.css
+++ b/src/App.css
@@ -189,6 +189,7 @@ grid-row: 3; */
 
 .flex-item {
   margin: 10px;
+  margin-top: 30px;
 }
 
 .flex-item1 {
@@ -198,7 +199,7 @@ grid-row: 3; */
 
 .nav-title-name-container {
   margin-right: 10px;
-  margin-top: 0;
+  margin-top: 15px;
   padding-top: 0;
 }
 
@@ -306,6 +307,13 @@ header {
   grid-template-rows: repeat(4, 1fr);
 }
 
+.contact-grid {
+  height: 800px;
+  display: grid;
+  grid-template-columns:repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+}
+
 .about-figure {
   grid-column: 2;
   grid-row: 1;
@@ -313,6 +321,12 @@ header {
 }
 
 .clients-figure {
+  grid-column: 2;
+  grid-row: 1;
+  margin-top: 3em;
+}
+
+.contact-figure {
   grid-column: 2;
   grid-row: 1;
   margin-top: 3em;
@@ -335,8 +349,16 @@ header {
   background-image: url("./img/headphones-fuschia.jpg");
 }
 
+.contact-avatar-container {
+  background-image: url("./img/phone-square.jpg");
+}
+
 
 .project-list {
+  background: #eee;
+  border: 1px solid black;
+  margin-top: 0;
+  padding-top: 20px;
   grid-column: 1;
   display: grid;
   grid-template-row:repeat(3, 1fr);
@@ -348,15 +370,11 @@ header {
 }
 
 .pi1 {
-  grid-row: 1
-}
-
-.pi2 {
-  grid-row: 2
+  grid-row: 1;
 }
 
 .pi3 {
-  grid-row: 3
+  grid-row: 3;
 }
 
 
