Fix links for external web apps

--- a/src/App.css
+++ b/src/App.css
@@ -361,7 +361,7 @@ header {
   padding-top: 20px;
   grid-column: 1;
   display: grid;
-  grid-template-row:repeat(3, 1fr);
+  grid-template-row:repeat(4, 1fr);
 
 }
 
@@ -375,6 +375,10 @@ header {
 
 .pi3 {
   grid-row: 3;
+}
+
+.pi4 {
+  grid-row: 4;
 }
 
 
